Fixed grid issues on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -586,6 +586,7 @@ video {
 	border: var(--theme-border);
 	border-radius: var(--theme-border-radius);
 	padding: 1.5rem;
+	overflow: hidden;
 }
 
 a.card:hover{
